my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LSX/lsx-vldi.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:7:3: error: use of undeclared identifier '__m128i'
    7 |   __m128i __m128i_out, __m128i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:3: error: unknown type name '__m128'; did you mean '__mfp8'?
    8 |   __m128  __m128_out, __m128_result;
      |   ^~~~~~
      |   __mfp8
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:9:3: error: use of undeclared identifier '__m128d'
    9 |   __m128d __m128d_out, __m128d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:10:3: error: use of undeclared identifier 'v2u64'
   10 |   v2u64 v2u64_op0, v2u64_op1, v2u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:11:3: error: use of undeclared identifier 'v4i32'
   11 |   v4i32 v4i32_op0, v4i32_op1, v4i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:19:3: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   19 |   __m128i_result = (__m128i){0x00a300a300a300a3, 0x00a300a300a300a3};
      |   ^~~~~~~~~~~~~~
      |   __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:19:21: error: use of undeclared identifier '__m128i'
   19 |   __m128i_result = (__m128i){0x00a300a300a300a3, 0x00a300a300a300a3};
      |                     ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:20:3: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   20 |   __m128i_out = __lsx_vldi(1187);
      |   ^~~~~~~~~~~
      |   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:20:17: error: call to undeclared function '__lsx_vldi'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   20 |   __m128i_out = __lsx_vldi(1187);
      |                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:20:15: error: assigning to '__mfp8' from incompatible type 'int'
   20 |   __m128i_out = __lsx_vldi(1187);
      |               ^ ~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:21:18: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   21 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                  ^~~~~~~~~~~~~~
      |                  __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:21:35: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   21 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                                   ^~~~~~~~~~~
      |                                   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:21:55: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   21 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                                                       ^~~~~~~~~~~
      |                                                       __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:23:3: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   23 |   __m128i_result = (__m128i){0xfffffffffffffe15, 0xfffffffffffffe15};
      |   ^~~~~~~~~~~~~~
      |   __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:23:21: error: use of undeclared identifier '__m128i'
   23 |   __m128i_result = (__m128i){0xfffffffffffffe15, 0xfffffffffffffe15};
      |                     ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:24:3: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   24 |   __m128i_out = __lsx_vldi(3605);
      |   ^~~~~~~~~~~
      |   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:24:15: error: assigning to '__mfp8' from incompatible type 'int'
   24 |   __m128i_out = __lsx_vldi(3605);
      |               ^ ~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:25:18: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   25 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                  ^~~~~~~~~~~~~~
      |                  __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:25:35: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   25 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                                   ^~~~~~~~~~~
      |                                   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vldi.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
